--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bevy-inspector-egui = "0.19.0"
 chrono = "0.4"
 rand = "0.8.5"
 wasm-bindgen = "0.2.81"
+ron = "0.8"
 
 [profile.dev]
 opt-level = 1
